# rust-web-scrapper

./: Cargo.toml  README.md
src/: main.rs
