[package]
name = "rust_web_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"]}
scraper = "0.12"
regex = "1.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
serde_with = "1.11"
tokio = { version = "1.12", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
surf = "2.3"
